--- a/email.html
+++ b/email.html
@@ -34,18 +34,17 @@
 <body>
 <div class="wrap">
 
-  <!-- GLOBAL MENU (root / links so it works from ANY page) -->
   <nav class="menu" aria-label="TitanCore Menu">
-    <a class="menu-btn" href="/index.html" data-nav="dashboard">Dashboard</a>
-    <a class="menu-btn" href="/contact.html" data-nav="contact">Contact</a>
-    <a class="menu-btn" href="/contract.html" data-nav="contract">Contract</a>
-    <a class="menu-btn" href="/email-routing.html" data-nav="email">Email Routing</a>
-    <a class="menu-btn" href="/report-approval.html" data-nav="report">Report &amp; Approval</a>
-    <a class="menu-btn" href="/omni-system.html" data-nav="omni">Omni System</a>
-    <a class="menu-btn" href="/tax-network.html" data-nav="tax">Tax Network</a>
-    <a class="menu-btn active" href="/agent-suite.html" data-nav="agent-suite">Agent A.I. Suite</a>
-    <a class="menu-btn" href="/public-portal.html" data-nav="public">Public Portal</a>
-  </nav>
+  <a class="menu-btn" href="/index.html">Dashboard</a>
+  <a class="menu-btn" href="/contact.html">Contact</a>
+  <a class="menu-btn" href="/contract.html">Contract</a>
+  <a class="menu-btn" href="/email-routing.html">Email Routing</a>
+  <a class="menu-btn" href="/report-approval.html">Report &amp; Approval</a>
+  <a class="menu-btn" href="/omni-system.html">Omni System</a>
+  <a class="menu-btn" href="/tax-network.html">Tax Network</a>
+  <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
+  <a class="menu-btn" href="/public-portal.html">Public Portal</a>
+</nav>
 
 <script>
   // Auto-highlight current page as GREEN button (no manual "active" needed)
