--- a/approval.html
+++ b/approval.html
@@ -13,7 +13,7 @@
     <a class="menu-btn" href="/index.html">Dashboard</a>
     <a class="menu-btn" href="/contact.html">Contact</a>
     <a class="menu-btn" href="/contract.html">Contract</a>
-    <a class="menu-btn" href="/email-routing.html">Email Routing</a>
+    <a class="menu-btn" href="/email-routing.html" data-page="email-routing">Email Routing</a>
     <a class="menu-btn" href="/report.html">Report</a>
     <a class="menu-btn active" href="/approval.html">Approval</a>
     <a class="menu-btn" href="/omni-system.html">Omni System</a>
