--- a/agentsystem.html
+++ b/agentsystem.html
@@ -10,19 +10,18 @@
 <body>
   <div class="wrap">
 
-    <nav class="nav" aria-label="Primary navigation">
-      <a href="/index.html">Dashboard</a>
-      <a href="/contract.html">Contract</a>
-      <a href="/contact.html">Contact</a>
-      <a href="/email.html">Email Routing</a>
-      <a href="/approval.html">Report &amp; Approval</a>
-      <a href="/omni.html">Omni System</a>
-      <a href="/tax.html">Tax Network</a>
-      <a href="/agent-ai-suite.html">Agent A.I. Suite</a>
-      <a href="/agentsystem.html">Agent System</a>
-      <a href="/finance.html">Finance</a>
-      <a href="/public.html">Public Portal</a>
-    </nav>
+   <nav class="menu" aria-label="TitanCore Menu">
+  <a class="menu-btn" href="/index.html">Dashboard</a>
+  <a class="menu-btn" href="/contact.html">Contact</a>
+  <a class="menu-btn" href="/contract.html">Contract</a>
+  <a class="menu-btn" href="/email.html">Email Routing</a>
+  <a class="menu-btn" href="/report.html">Report</a>
+  <a class="menu-btn" href="/approval.html">Approval</a>
+  <a class="menu-btn" href="/omni-system.html">Omni System</a>
+  <a class="menu-btn" href="/tax-network.html">Tax Network</a>
+  <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
+  <a class="menu-btn" href="/public-portal.html">Public Portal</a>
+</nav>
 
     <div class="panel">
       <span class="tag">AGENT SYSTEM — CONTROL</span>
