--- a/approval.html
+++ b/approval.html
@@ -10,17 +10,17 @@
 <body>
   <!-- TOP MENU (same on every page) -->
   <nav class="menu" aria-label="TitanCore Menu">
-    <a class="menu-btn" href="/index.html">Dashboard</a>
-    <a class="menu-btn" href="/contact.html">Contact</a>
-    <a class="menu-btn" href="/contract.html">Contract</a>
-    <a class="menu-btn" href="/email-routing.html" data-page="email-routing">Email Routing</a>
-    <a class="menu-btn" href="/report.html">Report</a>
-    <a class="menu-btn active" href="/approval.html">Approval</a>
-    <a class="menu-btn" href="/omni-system.html">Omni System</a>
-    <a class="menu-btn" href="/tax-network.html">Tax Network</a>
-    <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
-    <a class="menu-btn" href="/public-portal.html">Public Portal</a>
-  </nav>
+  <a class="menu-btn" href="/index.html">Dashboard</a>
+  <a class="menu-btn" href="/contact.html">Contact</a>
+  <a class="menu-btn" href="/contract.html">Contract</a>
+  <a class="menu-btn" href="/email.html">Email Routing</a>
+  <a class="menu-btn" href="/report.html">Report</a>
+  <a class="menu-btn" href="/approval.html">Approval</a>
+  <a class="menu-btn" href="/omni-system.html">Omni System</a>
+  <a class="menu-btn" href="/tax-network.html">Tax Network</a>
+  <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
+  <a class="menu-btn" href="/public-portal.html">Public Portal</a>
+</nav>
 
   <main class="wrap">
     <section class="panel">
