--- a/email.html
+++ b/email.html
@@ -38,8 +38,9 @@
   <a class="menu-btn" href="/index.html">Dashboard</a>
   <a class="menu-btn" href="/contact.html">Contact</a>
   <a class="menu-btn" href="/contract.html">Contract</a>
-  <a class="menu-btn" href="/email-routing.html">Email Routing</a>
-  <a class="menu-btn" href="/report-approval.html">Report &amp; Approval</a>
+  <a class="menu-btn" href="/email.html">Email Routing</a>
+  <a class="menu-btn" href="/report.html">Report</a>
+  <a class="menu-btn" href="/approval.html">Approval</a>
   <a class="menu-btn" href="/omni-system.html">Omni System</a>
   <a class="menu-btn" href="/tax-network.html">Tax Network</a>
   <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
