--- a/index.html
+++ b/index.html
@@ -284,17 +284,18 @@
     </div>
 
     <!-- TOP MENU (ONLY PLACE for modules) -->
-    <nav class="nav" aria-label="Primary navigation">
-      <a href="/index.html">Dashboard</a>
-      <a href="/contact.html">Contact</a>
-      <a href="/contract.html">Contract</a>
-      <a href="/email.html">Email Routing</a>
-      <a href="/approval.html">Report &amp; Approval</a>
-      <a href="/omni.html">Omni System</a>
-      <a href="/tax.html">Tax Network</a>
-      <a href="/agent-suite.html">Agent AI Suite</a>
-      <a href="/public.html">Public Portal</a>
-    </nav>
+    <nav class="menu" aria-label="TitanCore Menu">
+  <a class="menu-btn" href="/index.html">Dashboard</a>
+  <a class="menu-btn" href="/contact.html">Contact</a>
+  <a class="menu-btn" href="/contract.html">Contract</a>
+  <a class="menu-btn" href="/email.html">Email Routing</a>
+  <a class="menu-btn" href="/report.html">Report</a>
+  <a class="menu-btn" href="/approval.html">Approval</a>
+  <a class="menu-btn" href="/omni-system.html">Omni System</a>
+  <a class="menu-btn" href="/tax-network.html">Tax Network</a>
+  <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
+  <a class="menu-btn" href="/public-portal.html">Public Portal</a>
+</nav>
 
     <!-- 3 COLUMNS -->
     <section class="grid" aria-label="Executive control grid">
