--- a/agent-suite.html
+++ b/agent-suite.html
@@ -6,8 +6,8 @@
   <title>Agent AI Suite — TitanCore</title>
 
   <!-- IMPORTANT: this is what stops the page from turning WHITE -->
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="stylesheet" href="/agent-suite.css" />
+  <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
 </head>
 
 <body class="tc">
