--- a/agentsystem.html
+++ b/agentsystem.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Agent System — TitanCore Executive Control Center</title>
-  <link rel="stylesheet" href="/styles.css"/>
-  <script src="/app.js" defer></script>
+  <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
 </head>
 <body>
   <div class="wrap">
