--- a/approval.html
+++ b/approval.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore — Approval</title>
-  <link rel="stylesheet" href="/styles.css" />
+ <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
 </head>
 
 <body>
