--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore — Contact Command</title>
-  <link rel="stylesheet" href="./styles.css" />
-  <style>
+  <link rel="stylesheet" href="/styles.css">
+<script src="/app.js" defer></script>
     /* local safe layout only for this page */
     .wrap{max-width:1100px;margin:0 auto;padding:16px}
     .panel{background:rgba(0,0,0,.35);border:1px solid rgba(212,175,55,.35);border-radius:18px;padding:16px;margin-top:14px}
