--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TitanCore — Contact Command</title>
-  <link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="/styles.css?v=2">
 <script src="/app.js" defer></script>
     /* local safe layout only for this page */
     .wrap{max-width:1100px;margin:0 auto;padding:16px}
